# csp-name-splitter

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  PREVIEW_ENHANCEMENTS.md  README.md  THIRD_PARTY_NOTICES.md  csp-bridge-x86_64-pc-windows-msvc.spec  plan.yaml  pyproject.toml  run_gui.bat  test_config_fields.py  test_gutter_unit.py  test_margin_unit.py  test_page_size.py  test_preview.py  test_unit_conversion.py
.github/: copilot-instructions.md  settings.json
.github/agents/: analyst.agent.md  architect.agent.md  assessor.agent.md  developer.agent.md  impact-analyst.agent.md  manager.agent.md  planner.agent.md  reviewer.agent.md  test-designer.agent.md  test-verifier.agent.md  writer.agent.md
.github/rules/: gate-profiles.json
.github/workflows/: ci.yml  release.yml
docs/: tauri-development-guide.md
docs/architecture/: data-flow.md  glossary.md  module-map.md
name_splitter/: bridge.py
name_splitter/app/: app_settings.py  cli.py  error_messages.py  gui.py  gui_handlers.py  gui_handlers_batch.py  gui_handlers_config.py  gui_handlers_job.py  gui_handlers_log.py  gui_handlers_preset.py  gui_handlers_size.py  gui_handlers_template.py  gui_state.py  gui_types.py  gui_utils.py  gui_widgets.py  gui_widgets_layout.py  main.py
resources/: default_config.yaml
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: bridge.rs  lib.rs  main.rs
test_env/: README.md  sample.ppm  test_config.yaml
tests/: test_app_settings_presets.py  test_app_settings_quick_run.py  test_app_settings_recent.py  test_auto_open.py  test_batch.py  test_bridge.py  test_cli.py  test_cli_subcommands.py  test_config.py  test_config_fields.py  test_error_messages.py  test_first_run.py  test_grid.py  test_gui_utils.py  test_gutter_unit.py  test_image_ops.py  test_image_read.py  test_job.py  test_margin_unit.py  test_merge.py  test_output_dpi.py  test_page_number.py  test_page_size.py  test_pdf_export.py  test_preview.py  test_preview_perf.py  test_progress_timing.py  test_render.py  test_settings_log.py  test_template.py  test_unit_conversion.py
tools/: create_icon.py  create_test_env.py  create_test_images.py  run_smoke_test.py  verify_bridge.py
(+33 files in other folders)
