[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-name-splitter"
version = "0.1.0"
description = "Split CSP name images into per-page PNG outputs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "Pillow>=9.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = ["flet>=0.20"]
test = ["pytest>=7.0"]

[project.scripts]
csp-name-splitter = "name_splitter.app.cli:main"

[tool.setuptools.packages.find]
include = ["name_splitter*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "flet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test* *Tests"
python_functions = "test_*"
