[package]
name = "csp-name-splitter"
version = "1.0.0"
description = "CSP Name Splitter - Tauri Application"
authors = ["you"]
edition = "2021"

[lib]
name = "csp_name_splitter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util"] }
